--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,46 @@
     font-family: sans-serif;
 }
 
-.desc {
+.box {
+    width: 200px;
+    background-color: cadetblue;
+    margin: 10px;
+    padding: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    font-size: 10px;
     text-align: center;
     font-family: sans-serif;
-    color: gray;
+    color: white;
+    box-shadow: 5px 5px 5px black;
+}
+
+.container {
+    width: 800px;
+    font-family: sans-serif;
+}
+
+.blog-img {
+    width: 20%;
+    height: 200px;
+    float: left;
+}
+
+.blog-content {
+    width: 80%;
+    height: 200px;
+    float: left;
+}
+
+.user-img {
+    float: left;
+}
+
+.user-name {
+    float: left;
+}
+
+.user-content {
+    clear: both;
 }
