--- a/css/main.css
+++ b/css/main.css
@@ -144,76 +144,45 @@ li, a {
     font-family: sans-serif;
 }
 
-.contact-box {
-    width: 400px;
+input, textarea {
+    box-sizing: border-box;
+}
+
+.form-background {
+    background-color: black;
+    padding: 30px;
+}
+
+.form-white {
     background-color: white;
     padding: 30px;
-    margin: auto;
-    letter-spacing: -1px;   
-}
-
-.form-box {
-    padding: 0px;
+    width: 80%;
+    max-width: 600px;
     margin: auto;
 }
 
-input {
+.form-input {
     width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    box-sizing: border-box;
-}
-
-textarea {
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    box-sizing: border-box;
-}
-
-.form-top {
-    width: 100%;
-    margin-top: 30px;
-}
-
-.form-left {
-    width: 48%;
-    float: left;
-    margin-right: 2%;
-}
-
-.form-right {
-    width: 48%;
-    float: left;
-    margin-left: 2%;
-}
-
-.form-bottom {
-    clear: both;
-    width: 100%;
-    margin-top: 10px;
-    padding: 1px;
-}
-
-.form-submit {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 30px;
-}
-
-.form-submit input {
-    width: 10px;
-    float: left;
-}
-
-.form-submit button {
-    width: 100px;
-    float: right;
-    background-color: gold;
-    color: white;
-    border: 0;
+    padding: 10px;
+    border: 1px solid black;
     border-radius: 5px;
-    padding: 5px;
 }
 
+.w-50 {
+    width: 50%;
+    float: left;
+    padding: 10px;
+}
 
+.w-100 {
+    width: 100%;
+    padding: 10px;
+}
+
+.send-btn {
+    float: right;
+    padding: 2px 10px 2px 10px;
+    background-color: gold;
+    border-radius: 5px;
+    border: 1px solid gray;
+}
