--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,47 @@ table {
     color: white;
 }
 
+.product-bg {
+    background-color: #eee;
+    padding: 20px;
+}
+
+.product-container {
+    display: flex;
+    width: 90%;
+    margin: auto;
+    max-width: 1000px;
+}
+
+.product-box {
+    width: 33%;
+    margin: 5px;
+    overflow: hidden;
+}
+
+.product-box img {
+    width: 100%;
+    display: block;
+}
+
+.overlay {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+    background: black;
+    transition: 0.5s;
+    font-size: 60px;
+    color: #eee;
+    text-align: center;
+    opacity: 0.5;
+}
+
+.product-box:hover .overlay {
+    top: 50%;
+}
+
 @media screen and (max-width: 1000px) {
     .main-title {
         font-size: 30px;
